# ChessGameAI

./: Board.h  CMakeLists.txt  GUI.h  Game.cpp  Game.h  main.cpp
include/: Piece.h  Utilities.h
src/: Board.cpp  Piece.cpp
